Update Makefile: dctor

--- a/programs/dctor/Makefile
+++ b/programs/dctor/Makefile
@@ -1,14 +1,42 @@
-.PHONY: default clean
 
-EXEC_NAME=dctor
 
-default: link
+# Variables
+CC = g++
+CFLAGS = -Wall -g
+TARGET_EXEC := dctor
+BUILD_DIR := ./build
+SRC_DIRS := ./src
+SRCS := $(shell find $(SRC_DIRS) -name '*.cpp' -or -name '*.c')
+OBJS := $(SRCS:%=$(BUILD_DIR)/%.o)
+DEPS := $(OBJS:.o=.d)
+INC_DIRS := $(shell find $(SRC_DIRS) -type d)
+INC_FLAGS := $(addprefix -I,$(INC_DIRS))
+CPPFLAGS := $(INC_FLAGS) -MMD -MP
 
+# Include common rules and variables from cpp.mk
 include ../../cpp.mk
 
-$(eval $(call program_compile_cpp_folder,src))
-$(eval $(call program_link_executable,$(EXEC_NAME)))
+# Default target
+default: $(BUILD_DIR)/$(TARGET_EXEC)
 
+# Linking
+$(BUILD_DIR)/$(TARGET_EXEC): $(OBJS)
+	$(CC) $(OBJS) -o $@
+
+# Compilation
+$(BUILD_DIR)/%.c.o: %.c
+	mkdir -p $(dir $@)
+	$(CC) $(CPPFLAGS) $(CFLAGS) -c $< -o $@
+
+$(BUILD_DIR)/%.cpp.o: %.cpp
+	mkdir -p $(dir $@)
+	$(CC) $(CPPFLAGS) $(CFLAGS) -c $< -o $@
+
+# Clean
+.PHONY: clean
 clean:
-	@ echo -e "Remove compiled files"
-	@ rm -rf debug
+	rm -r $(BUILD_DIR)
+
+# Include dependencies
+-include $(DEPS)
+
